; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/cec/extr_cec-pin-error-inj.c_cec_pin_show_cmd.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/cec/extr_cec-pin-error-inj.c_cec_pin_show_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.seq_file = type { i32 }

@CEC_ERROR_INJ_OP_ANY = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [5 x i8] c"any,\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"0x%02x,\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"once \00", align 1
@.str.3 = private unnamed_addr constant [8 x i8] c"always \00", align 1
@.str.4 = private unnamed_addr constant [8 x i8] c"toggle \00", align 1
@.str.5 = private unnamed_addr constant [5 x i8] c"off \00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.seq_file*, i64, i32)* @cec_pin_show_cmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cec_pin_show_cmd(%struct.seq_file* %0, i64 %1, i32 %2) #0 {
  %4 = alloca %struct.seq_file*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store %struct.seq_file* %0, %struct.seq_file** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i64, i64* %5, align 8
  %8 = load i64, i64* @CEC_ERROR_INJ_OP_ANY, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %13

10:                                               ; preds = %3
  %11 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %12 = call i32 @seq_puts(%struct.seq_file* %11, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  br label %17

13:                                               ; preds = %3
  %14 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %15 = load i64, i64* %5, align 8
  %16 = call i32 @seq_printf(%struct.seq_file* %14, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i64 %15)
  br label %17

17:                                               ; preds = %13, %10
  %18 = load i32, i32* %6, align 4
  switch i32 %18, label %28 [
    i32 129, label %19
    i32 130, label %22
    i32 128, label %25
  ]

19:                                               ; preds = %17
  %20 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %21 = call i32 @seq_puts(%struct.seq_file* %20, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0))
  br label %31

22:                                               ; preds = %17
  %23 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %24 = call i32 @seq_puts(%struct.seq_file* %23, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i64 0, i64 0))
  br label %31

25:                                               ; preds = %17
  %26 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %27 = call i32 @seq_puts(%struct.seq_file* %26, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.4, i64 0, i64 0))
  br label %31

28:                                               ; preds = %17
  %29 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %30 = call i32 @seq_puts(%struct.seq_file* %29, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.5, i64 0, i64 0))
  br label %31

31:                                               ; preds = %28, %25, %22, %19
  ret void
}

declare dso_local i32 @seq_puts(%struct.seq_file*, i8*) #1

declare dso_local i32 @seq_printf(%struct.seq_file*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
